syntax = "proto3";

package iots.temperature.srv.Thermometar;

service Thermometar {
	rpc GetStatus(Empty) returns (RoomTemperatrue) {}
    rpc CoolTheRoom(Degrees) returns (RoomTemperatrue) {}
    rpc HeatTheRoom(Degrees) returns (RoomTemperatrue) {}
}

message RoomTemperatrue {
	string RoomName = 1;
	int64 Temperature = 2;
}

message Degrees {
    int64 Temperature =1;
}

message Empty {

}
